--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy
 scipy
 tqdm
 lpips
+pandas
 mmcv
 imageio
 imageio-ffmpeg
@@ -22,3 +23,4 @@ torch_optimizer
 test-tube
 gdown
 pytorch_lightning
+neural-tangents # for ntk analysis
